# AstroKarma

./: .gitattributes  .gitignore  README.md  Run Astro Karma.bat
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/app/: auth.py  config.py  db.py  deps.py  drive_service.py  main.py  models.py  schemas.py  seed.py
api/app/astro/: ephemeris.py  geocode.py  nakshatra.py  vargas.py
api/app/routers/: auth.py  charts.py  drive.py  generate.py
api/ephe/: .gitkeep
design/reference/: Astro Karma.html  HANDOFF.md  Nakshatra.dc.html
docs/: CHART_GEOMETRY.md  DESIGN.md  SPEC.md
infra/terraform/: README.md
web/: .env.example  README.md  index.html  package-lock.json  package.json
web/public/: manifest.webmanifest
web/src/: App.tsx  main.tsx  types.ts
web/src/app/: ChartScreen.tsx  CreateScreen.tsx  HomeScreen.tsx  LibraryScreen.tsx
web/src/components/: ChartCard.tsx  NorthIndianChart.tsx  Sidebar.tsx  Toast.tsx  TopBar.tsx
web/src/lib/: api.ts  astro.ts  chartGeometry.ts  exportDoc.ts
web/src/store/: useCharts.ts  useToast.ts
web/src/styles/: global.css  tokens.css
