[project]
name = "astro-karma-api"
version = "0.1.0"
description = "Astro Karma backend — auth, ephemeris, charts/notes, flashcards"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-jose[cryptography]>=3.3",
    "google-auth>=2.35",
    "httpx>=0.27",
    "pyswisseph>=2.10",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
