[project]
name = "astro-karma-api"
version = "0.2.0"
description = "Astro Karma backend — auth, ephemeris, charts/notes, flashcards"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "python-jose[cryptography]>=3.3",
    "google-auth>=2.35",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Phase 3 — ephemeris / chart generation
astro = ["pyswisseph>=2.10"]
# Phase 5 — AI flashcards
ai = ["anthropic>=0.39"]
# Production database driver (local dev uses SQLite)
prod = ["psycopg[binary]>=3.2"]
dev = ["ruff>=0.7", "pytest>=8.3"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers"]
